<resources>
    <string name="app_name">BenchMark</string>
    <string name="home_tab_test">测试</string>
    <string name="home_tab_db">统计</string>
    <string name="home_tab_adv">资讯</string>
    <string name="gv_text_item1">图片分类</string>
    <string name="gv_text_item2">目标检测</string>
    <string name="gv_text_item3">人脸检测</string>
    <string name="gv_text_item4">更多</string>
    <string name="begin_btn">开始测试</string>
    <string name="end_btn">停止测试</string>
    <string name="classification_begin_guide">图片分类进行中...</string>
    <string name="detection_begin_guide">目标检测进行中...</string>
    <string name="classification_pasue_guide">图片分类暂停中...</string>
    <string name="classification_end_guide">图片分类已停止</string>
    <string name="detection_pasue_guide">目标检测暂停中...</string>
    <string name="classification_data_guide">机器识别图片分类结果显示</string>
    <string name="classification_imge_guide">图片分类:\n\t\t\t\t图片分类会通过特定的训练模型，分类识别图片，按照分类概率高低输出可能的结果列表。</string>
    <string name="newsinfo_title">"寒武纪科技"</string>
    <string name="news_item_foot">"* * * * * * 已浏览全部内容 * * * * * *"</string>
    <string name="newsinfo_recover">"重新加载"</string>
    <string name="classificaton_res_toast">请先导入需要的资源文件</string>
    <string name="test_time">测试时间：</string>
    <string name="test_result">分类结果：</string>
    <string name="test_fps">Fps值：</string>
    <string name="test_fps_units">张/分钟</string>
    <string name="test_offline_units">张/秒</string>
    <string name="load_model">加载分类模型耗时：</string>
    <string name="classification_chart_title">CPU/IPU模式图片分类(FPS：张/秒)</string>
    <string name="decetion_chart_title">目标检测(FPS：张/分钟)</string>
    <string name="decetion_chart_title_offline">离线目标检测(FPS：张/分钟)</string>
    <string name="off_classify_chart_title">IPU模式不同模式数据(FPS：张/秒)</string>
    <string name="face_chart_title">人脸检测fps值(单位：张/分钟)</string>
    <string name="classification_chart_desc">CPU模式图片分类fps值</string>
    <string name="classification_chart_ipu_desc">IPU模式图片分类fps值</string>
    <string name="detection_resnet50_cpu">CPU模式网络ResNet50数据</string>
    <string name="detection_resnet50_ipu">IPU模式网络ResNet50数据</string>
    <string name="detection_fastrcnn_cpu">CPU模式网络Fast-RCNN数据</string>
    <string name="detection_fastrcnn_ipu">IPU模式网络Fast-RCNN数据</string>

    <string name="classification_chart_y">FPS值：张/分钟</string>
    <string name="classification_chart_x">第几次</string>
    <string name="detection_title">目标检测</string>
    <string name="faceDetecte_title">人脸检测</string>
    <string name="detection_end_guide">目标检测已停止</string>
    <string name="detection_load_model">加载检测模型耗时：</string>
    <string name="detection_change_model">切换检测模型耗时：</string>
    <string name="classification_avg_time">平均速率：</string>
    <string name="classification_single_time">平均时间：</string>
    <string name="classification_result">结果详情:点击查看</string>
    <string name="classification_dialog_null">不存在已经分类的图片</string>
    <string name="load_data_detection">正在加载目标检测模型...</string>
    <string name="load_data_over">加载模型完毕。</string>
    <string name="cpu_mode">CPU模式</string>
    <string name="ipu_mode">IPU模式</string>
    <string name="decete_type">网络类型：</string>
    <string name="decete_type_change">切换网络中...</string>
    <string name="face_detection_title_cpu">人脸检测——CPU模式</string>
    <string name="face_detection_title_ipu">人脸检测——IPU模式</string>
    <string name="face_detector_guide">MTCNN方法识别人脸</string>
    <string name="face_detection_begin_guide">人脸检测进行中...</string>
    <string name="face_detection_pasue_guide">人脸检测暂停中...</string>
    <string name="face_detection_end_guide">人脸检测已结束</string>
    <string name="face_detector_function">人脸检测：\n\t\t\t\t是人脸特征点检测,人脸识别的基础.通过MTCNN,检测出图像中存在的人脸,并把它的位置准确地框出来。</string>
    <string name="face_detection_chart_desc">CPU模式人脸检测fps值</string>
    <string name="face_detection_chart_ipu_desc">IPU模式人脸检测fps值</string>
    <string name="face_detection_dialog_null">不存在已经检测的图片</string>
    <string name="more_function_title">功能选择</string>
    <string name="log_tag_classfication">ClassificationActivity</string>
    <string name="end_testing">检测结束</string>
    <string name="ms">ms</string>
    <string name="IPU_mode">IPU_mode</string>
    <string name="CPU_mode">CPU_mode</string>
    <string name="exit">再按一次退出程序</string>
    <string name="detection_result">图片目标检测结果显示</string>
    <string name="detection_introduce">目标检测：\n\t\t\t\t通过特定的训练模型，不仅仅要识别出来是什么物体，而且还要预测物体的位置。</string>
    <string name="facedetect_guide">人脸识别检测结果显示</string>
    <string name="progress_ipu">IPU初始化中...</string>
    <string name="version_name">BenchMark</string>
    <string name="version_info">版本1.0.0</string>
    <string name="about_us">关于我们</string>
    <string name="single_offline_classification">单层离线图片分类</string>
    <string name="offline_classification">加层离线图片分类</string>
    <string name="single_offline_detection">单层离线目标检测</string>
    <string name="offline_detection">加层离线目标检测</string>
    <string name="document_detection">文档检测校正</string>
    <string name="word_split">词性标注</string>
    <string name="face_compare">人脸比对</string>
    <string name="face_attribute">人脸属性</string>
    <string name="face_feature">五官特征检测</string>
    <string name="entity_detect">实体识别</string>
    <string name="speech_recognition">语音识别</string>
    <string name="offline_dialog_title">操作提示</string>
    <string name="offline_dialog_content">此功能需要在主页侧拉菜单打开IPU模式</string>
    <string name="title_data_detection_ipu">IPU模式\n(ResNet50/Fast-RCNN)</string>
    <string name="title_data_detection_cpu">CPU模式\n(ResNet50/Fast-RCNN)</string>
    <string name="single_on_cpu">单层CPU</string>
    <string name="single_on_ipu">单层IPU</string>
    <string name="single_off_ipu">离线IPU</string>
    <string name="single_toolbar">单层网络性能比较</string>
    <string name="single_layer_chart_y">Single layer Execution time(lgN:ms)</string>
    <string name="single_describle">单层网络性能比较：\n\t\t\t\t主要用来比较单层网络CPU模式在线模型，IPU模式在线和离线模型处理数据的性能比较</string>
    <string name="face_feature_detect">对输入图像进行人脸五官特征检测，返回代表五官轮廓位置的关键点坐标（目前数量为68个landmark点）。可以为美颜处理、人脸建模、表情识别等后续算法进一步处理提供输入。</string>
    <string name="textocr_describle">OCR光学字符识别(Optical Character Recognition)技术，是通过扫描等光学输入方式将各种票据、报刊、书籍、文稿及其它印刷品的文字转化为图像信息，再利用文字识别技术将图像信息转化为可以使用的计算机输入技术。</string>
    <string name="segment_title">人像分割</string>
    <string name="participle_title">分词</string>

    <string name="participle_test1">随着信息技术的发展，网络信息量暴增，文本信息得到快速增长，信息成几何级增长逐步成为当今社会的主要特征。为了提取文本关键信息，在搜索引擎等领域，使得分词变得尤为重要。分词作为自然语言处理领域的基础研究，衍生出各类不同的文本处理相关应用。</string>
    <string name="participle_test3">我要打开蓝牙</string>
    <string name="participle_test4">您个人信用卡07月账单￥198.00，还款日07月27日，点cmbt.cn/zZyF6N9avld10i分期送积分【招商银行】</string>
    <string name="participle_test2">我要看刺激的电影速度与激情</string>

    <string name="code_title">码检测</string>
    <string name="label_detector">图像标签检测</string>
    <string name="scene_detector">场景检测</string>
    <string name="aesthetics_score">美学评分</string>
    <string name="super_resolution">图像超分辨率</string>
    <string name="face_parsing">人脸解析</string>
    <string name="head_pose">人脸朝向识别</string>
    <string name="txt_super_resolution">文字图像超分</string>

    <string name="segment_message">人像分割是指的将图片中的人像和背景进行分离，分割结果表现为人像和背景区分呈现，人像区域为白色，背景为黑色。</string>
    <string name="label_detector_describle">图片分类标签是基于深度学习方法，识别图片中物体、场景、行为等信息，返回对应标签信息，如：花、鸟、鱼、虫、汽车、建筑等等，以应用于各类基于图片内容理解的智能业务，如图库照片自动分类整理、社交图片识别分享等。</string>
    <string name="aesthetics_score_describle">从多维度判断图像质量，为图像打分，所评估的分数，不仅能对图像的失焦、抖动等技术因素进行评价，还可以从歪斜、色彩、构图等角度评判主观“美”的感受。</string>
    <string name="face_parsing_describle">人脸解析，是将人的头部包含人脸五官构成进行分解，得到头发、面部皮肤、眼睛、眉毛、鼻子、嘴、耳朵等区域。</string>
    <string name="scene_detector_describe">通过识别图像内容所属场景，对输入图片进行快速分类,包括动物、绿植、食物、建筑、汽车等多种类别，识别准确率高。</string>
    <string name="super_resolution_describe">单张图片空域超分辨率（SISR：Signle Image Super-Resolution），即给定单一一张图片，使用智能方法将其放大，令其分辨率更高，得到比传统放大更加清晰的细节纹理。</string>
    <string name="document_detection_describle">文档校验能够实现对文档翻拍过程的辅助增强功能，自动识别图片中的文档，返回文档在原图中的位置信息。这里的文档可泛指外形方正的事物，比如书本、相片、画框等。根据文档在原始图片中的位置信息校正文档的拍摄角度，自动将拍摄视角调整到正对文档的角度上。</string>
    <string name="entity_detect_describle">实体识别覆盖范围大，能够满足日常开发中对实体识别的需求，让应用体验更好。识别准确率高，能够准确的提取到实体信息，对应用基于信息的后续服务形成关键影响。</string>
    <string name="speech_recognition_describle">与机器进行语音交流，让机器明白你说什么，这是人们长期以来梦寐以求的事情。中国物联网校企联盟形象地把语音识别比作为“机器的听觉系统”。语音识别技术，也被称为自动语音识别（Automatic Speech Recognition, ASR）。就是让机器通过识别和理解过程把语音信号转变为相应的文本或命令的技术。</string>
    <string name="face_attribute_describle">人脸属性是表征人脸特征的一系列生物特性，具有很强的自身稳定性和个体差异性，标识了人的身份。它包括性别、肤色 、年龄、表情等。本接口的主要功能是对输入图片中的人脸做属性识别，给出人脸的性别属性。</string>
    <string name="world_split_describle">随着信息技术的发展，网络信息量暴增，文本信息得到快速增长，信息成几何级增长逐步成为当今社会的主要特征。为了提取文本关键信息，在搜索引擎等领域，使得分词变得尤为重要。通过分词，理解文本所要表达的正确含义。</string>
    <string name="face_compare_describle">通过识别并提取人脸特征，对人像进行高精度比对，给出置信度分数，判断对象是否为同一个人。使用人脸比对技术，可应用于实现对图库照片的智能分类管理等场景中。基于领先的端侧智能图像识别算法，对人脸识别准确度高，让应用更具最佳体验。</string>
    <string name="head_pose_describe">人脸朝向，是指人脸面部中间基准线（指向头顶）在面部平面中的指向，分为：无方向（无人）、向上、向右、向下、向左五种场景。</string>
    <string name="text_super_resolution">对拍摄图片中的文字清晰度进行加强，以提升文字可识别度</string>
</resources>


