<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/cf_layout_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_face_detector"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_load_face_detector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/param_padding_bottom"
                android:paddingTop="@dimen/param_padding_top"
                android:text="@string/load_model"
                android:textColor="@android:color/white"
                android:visibility="invisible"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/param_bg"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="@dimen/param_padding_left">

                <TextView
                    android:id="@+id/tv_guide_face_detector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/face_detector_guide"
                    android:textColor="@color/test_text_color"/>

                <TextView
                    android:id="@+id/tv_face_detector_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_time"
                    android:textColor="@color/test_text_color"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tv_face_detector_fps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_fps"
                    android:textColor="@color/test_text_color"
                    android:visibility="gone"/>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_face_detector_begin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@mipmap/btn_bg"
                    android:text="@string/begin_btn"
                    android:textColor="@color/test_text_color"
                    android:textSize="@dimen/btn_text_size"/>

                <Button
                    android:id="@+id/btn_face_detector_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@mipmap/btn_bg"
                    android:text="@string/end_btn"
                    android:textColor="@color/test_text_color"
                    android:textSize="@dimen/btn_text_size"
                    android:visibility="gone"/>
            </RelativeLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@mipmap/image_bg"
            android:gravity="center"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/iv_face_detector_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:scaleType="fitXY"
                android:background="@color/green"
                android:src="@mipmap/classification_bg"/>



            <TextView
                android:id="@+id/tv_face_detector_function_describe"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@mipmap/text_bg"
                android:paddingLeft="@dimen/param_padding_left"
                android:paddingRight="@dimen/param_padding_left"
                android:paddingTop="@dimen/param_padding_left"
                android:text="@string/classification_imge_guide"
                android:textColor="@color/test_text_color"/>
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>